added backwards compatible acknowledgement of claim form generation event