@@ -14,20 +14,24 @@ import uk.gov.hmcts.reform.unspec.model.common.Element;
 import uk.gov.hmcts.reform.unspec.model.documents.CaseDocument;
 import uk.gov.hmcts.reform.unspec.service.docmosis.aos.AcknowledgementOfServiceGenerator;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static uk.gov.hmcts.reform.unspec.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.unspec.callback.CallbackType.ABOUT_TO_SUBMIT;
+import static uk.gov.hmcts.reform.unspec.callback.CaseEvent.GENERATE_ACKNOWLEDGEMENT_OF_CLAIM;
 import static uk.gov.hmcts.reform.unspec.callback.CaseEvent.GENERATE_ACKNOWLEDGEMENT_OF_SERVICE;
 import static uk.gov.hmcts.reform.unspec.utils.ElementUtils.element;
 
 @Service
 @RequiredArgsConstructor
-public class GenerateAcknowledgementOfServiceCallbackHandler extends CallbackHandler {
+public class GenerateAcknowledgementOfClaimCallbackHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(GENERATE_ACKNOWLEDGEMENT_OF_SERVICE);
+    private static final List<CaseEvent> EVENTS = List.of(
+        //TODO: backwards compatibility, to be removed in 2nd PR
+        GENERATE_ACKNOWLEDGEMENT_OF_SERVICE,
+        GENERATE_ACKNOWLEDGEMENT_OF_CLAIM
+    );
 
     private final AcknowledgementOfServiceGenerator acknowledgementOfServiceGenerator;
     private final CaseDetailsConverter caseDetailsConverter;
